added get all debtors
