# docs/swagger.yaml
@@ -79,7 +79,7 @@ paths:
       tags:
       - transaction
   /api/user/debtor/{uuid}:
-    post:
+    get:
       consumes:
       - application/json
       operationId: value-debtor
@@ -112,7 +112,38 @@ paths:
             $ref: '#/definitions/handlers.errorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Pin child user UUID to auth user
+      summary: Get sum transaction user
+      tags:
+      - user
+  /api/user/debtors:
+    get:
+      consumes:
+      - application/json
+      operationId: value-debtors
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handlers.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get sum transaction users
       tags:
       - user
   /api/user/pin{uuid}:
